<resources>
    <string name="app_name">Binary Calculator</string>
    <string name="binary_calculator">Binary Calculator</string>
    <string name="enter_binary_number">Enter Binary Number:</string>
    <string name="show_results_for">Show Results for:</string>
    <string name="decimal">Decimal</string>
    <string name="created_by_mark_angelo_maligalig">Created by Mark Angelo Maligalig</string>
    <string name="octal">Octal:</string>
    <string name="decimal_result_label">Decimal:</string>
    <string name="octal_button">Octal</string>
    <string name="hex_button">Hex</string>
    <string name="calculate_button">CONVERT!</string>
    <string name="hex_result_label">Hex:</string>
</resources>